METRON-1252 Build ui for grouping alerts into meta alerts (iraghumitra via nickwallen) closes apache/metron#803

--- a/metron-interface/metron-alerts/src/_variables.scss
+++ b/metron-interface/metron-alerts/src/_variables.scss
@@ -88,11 +88,13 @@ $sky-blue: #75D2ED;
 $outer-space: #2E3A3F;
 $white: #FFFFFF;
 $iron: #D1D3D4;
+
 $rolling-stone: #808285;
 $nile-blue: #18404E;
 $apple-blossom: #A94442;
 
 $eastern-blue-1: #1190C0;
+$eastern-blue-2: #2192BF;
 $matisse: #1E7490;
 $downy: #77BBD0;
 $trout: #515760;
