--- a/metron-interface/metron-alerts/src/app/alerts/alert-details/alert-details.component.html
+++ b/metron-interface/metron-alerts/src/app/alerts/alert-details/alert-details.component.html
@@ -11,10 +11,10 @@
 	OR CONDITIONS OF ANY KIND, either express or implied. See the License for
   the specific language governing permissions and limitations under the License.
   -->
-<div class="metron-slider-pane-details load-right-to-left dialog1x">
-    <div class="container-fluid pl-0 h-100">
+<div class="metron-slider-pane-details load-right-to-left dialog1x" [ngClass]="{'is-meta-alert': isMetaAlert}">
+    <div class="container-fluid pl-0 h-100" [ngClass]="{'pr-0': isMetaAlert}">
         <div class="h-100 d-flex">
-            <div class="nav-container">
+            <div class="nav-container" *ngIf="!isMetaAlert">
                 <ul class="nav flex-column">
                     <li class="nav-item">
                         <a class="nav-link" [ngClass]="{'active': activeTab === tabs.DETAILS}" (click)="activeTab=tabs.DETAILS">
@@ -32,7 +32,20 @@
                 <div class="container-fluid h-100">
                     <div class="row title-container">
                         <div class="col-md-10 px-0">
-                            <div class="form-title" appAlertSeverity [severity]="alertSource['threat:triage:score']"> {{ alertSource['threat:triage:score'] }} {{ alertSource.guid }}</div>
+                            <div class="form-title row ml-2">
+                                <div class="col px-0">
+                                    <span appAlertSeverity [severity]="alertSource['threat:triage:score']"> </span>
+                                    <span> {{ alertSource['threat:triage:score'] }} </span>
+                                </div>
+                                <div class="px-0" style="width: 205px">
+                                    <span [ngClass]="{'editable-text': alertSources.length > 1}" *ngIf="!showEditor" (click)="toggleNameEditor()"> {{ (alertSource.name && alertSource.name.length > 0)? alertSource.name : alertId | centerEllipses:20 }} </span>
+                                    <div class="input-group" *ngIf="showEditor">
+                                        <input type="text" class="form-control"  [(ngModel)]="alertName">
+                                        <span class="input-group-addon" [ngClass]="{'disabled': alertName.length === 0}" (click)="saveName()" ><i class="fa fa-check" aria-hidden="true"></i></span>
+                                        <span class="input-group-addon" (click)="toggleNameEditor()"><i class="fa fa-times" aria-hidden="true"></i></span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="col-md-2 px-0">
                             <i class="fa fa-times pull-right close-button" aria-hidden="true" (click)="goBack()"></i>
@@ -57,11 +70,16 @@
                             </tr>
                         </table>
                     </div>
-                    <div class="ml-1 my-4 form" *ngIf="activeTab === tabs.DETAILS">
-                        <div *ngFor="let field of alertFields" class="row">
-                            <div class="col-6 mb-1 key">{{ field }}</div>   <div class="col-6 value"> {{ alertSource[field] }} </div>
-                        </div>
+
+                    <div class="ml-1 my-3 form" *ngIf="activeTab === tabs.DETAILS">
+                        <ng-container *ngFor="let alert of alertSources; let i = index;" >
+                            <div class="pb-2 alert-details-title"> Alert {{ i + 1 }} of {{ alertSources.length }}</div>
+                            <div *ngFor="let field of alert | alertDetailsKeys" class="row ml-1">
+                                <div class="col-6 mb-1 key">{{ field }}</div>   <div class="col-6"> {{ alert[field] }} </div>
+                            </div>
+                        </ng-container>
                     </div>
+
                     <div *ngIf="activeTab === tabs.COMMENTS" class="my-4">
                         <div> Comments <span *ngIf="alertCommentsWrapper.length > 0"> ({{alertCommentsWrapper.length}}) </span></div>
                         <textarea class="form-control" [(ngModel)]="alertCommentStr"> </textarea>
