METRON-1252 Build ui for grouping alerts into meta alerts (iraghumitra via nickwallen) closes apache/metron#803

--- a/metron-interface/metron-alerts/src/app/alerts/alerts-list/table-view/table-view.component.scss
+++ b/metron-interface/metron-alerts/src/app/alerts/alerts-list/table-view/table-view.component.scss
@@ -25,3 +25,16 @@
   font-size: 16px;
   cursor: pointer;
 }
+
+.fa-chain-broken {
+  color: $piction-blue;
+}
+
+.dropdown-cell {
+  padding-left: 0.6rem;
+}
+
+.icon-cell {
+  padding: 0.3rem 3px;
+}
+
