--- a/metron-deployment/packaging/ambari/metron-mpack/src/main/resources/common-services/METRON/CURRENT/package/templates/profiler.properties.j2
+++ b/metron-deployment/packaging/ambari/metron-mpack/src/main/resources/common-services/METRON/CURRENT/package/templates/profiler.properties.j2
@@ -58,7 +58,7 @@ profiler.max.routes.per.bolt={{profiler_max_routes_per_bolt}}
 
 profiler.hbase.salt.divisor=1000
 profiler.hbase.table={{profiler_hbase_table}}
-profiler.hbase.column.builder=VALUES_ONLY
+profiler.hbase.column.builder=VALUES_ONLY_WITH_CF
 profiler.hbase.column.family={{profiler_hbase_cf}}
 profiler.hbase.batch={{profiler_hbase_batch}}
 profiler.hbase.flush.interval.seconds={{profiler_hbase_flush_interval}}
